# rust-api

./: .env.example  Cargo.toml  README.md  api.http  docker-compose.yml
migrations/: 20240621005348_create_users_table.sql
src/: api_response.rs  db.rs  main.rs
src/api/: mod.rs  users.rs
src/models/: mod.rs  user.rs
src/services/: mod.rs  user_service.rs
