[package]
name = "ex08"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-std = "1.12"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "runtime-async-std",
  "macros",
  "postgres",
] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[dev-dependencies]
sqlx-cli = { version = "0.7", features = ["postgres"] }
